tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.stderr
error[E0277]: cannot cast `drizzle::sqlite::types::Text` to `drizzle::sqlite::types::Integer` for this dialect
  --> tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.rs:13:20
   |
13 |     let _ = cast::<_, _, drizzle::sqlite::types::Integer>(user.name, drizzle::sqlite::types::Integer);
   |                    ^ cast target is incompatible with source type
   |
   = help: the trait `CastTypePolicy<SQLiteDialect, drizzle::sqlite::types::Text, drizzle::sqlite::types::Integer>` is not implemented for `()`
   = note: for SQLite strict typing, use a compatible cast target or cast through ANY/raw sql intentionally
help: `()` implements trait `CastTypePolicy<D, Source, Target>`
  --> core/src/expr/util.rs
   |
   | / impl<Source: DataType + Compatible<Target>, Target: DataType>
   | |     CastTypePolicy<PostgresDialect, Source, Target> for ()
   | |__________________________________________________________^ `CastTypePolicy<PostgresDialect, Source, Target>`
...
   | / impl<Source: DataType + Compatible<Target>, Target: DataType>
   | |     CastTypePolicy<SQLiteDialect, Source, Target> for ()
   | |________________________________________________________^ `CastTypePolicy<SQLiteDialect, Source, Target>`
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
...
   |     (): CastTypePolicy<V::DialectMarker, E::SQLType, Target>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
